--- a/shop-mall-app/src/main/resources/application-test.properties
+++ b/shop-mall-app/src/main/resources/application-test.properties
@@ -2,20 +2,24 @@ jenkins.server-uri=http://192.168.66.214:8080
 jenkins.username=
 jenkins.password=
 
-spring.dbSource.url=jdbc:postgresql://192.168.66.214:5432/jenkins
-spring.dbSource.username=postgres
-spring.dbSource.password=postgres
-spring.dbSource.driverClassName=org.postgresql.Driver
-spring.dbSource.type=org.apache.commons.dbcp2.BasicDataSource
-spring.dbSource.dbcp2.initial-size=5
-spring.dbSource.dbcp2.min-idle=5
-spring.dbSource.dbcp2.max-idle=20
-spring.dbSource.dbcp2.max-total=20
-spring.dbSource.dbcp2.max-wait-millis=60000
-spring.dbSource.dbcp2.time-between-eviction-runs-millis=60000
-spring.dbSource.dbcp2.min-evictable-idle-time-millis=300000
-spring.dbSource.dbcp2.validation-query=SELECT 1
-spring.dbSource.dbcp2.pool-prepared-statements=true
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shop_mall?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.initial-size=1
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.max-active=20
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=SELECT 'x'
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=false
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 
 spring.redis.database=0
 spring.redis.host=192.168.66.214
@@ -41,6 +45,6 @@ spring.redis.timeout=0
 #spring.data.elasticsearch.cluster-nodes:localhost:9300
 #
 zookeeper.connect-string=ops-basic01.lingda.com:2181
-zookeeper.config.path=/smarter-devops-config
-zookeeper.regist.path=/smarter-devops-regist
+zookeeper.config.path=/lingmou-dev-xinzhou
+zookeeper.regist.path=/devServices_xinzhou
 #zookeeper.watch.path=/auto_build
