--- a/shop-mall-center/pom.xml
+++ b/shop-mall-center/pom.xml
@@ -29,5 +29,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.shop.mall</groupId>
+            <artifactId>shop-mall-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
