--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 <artifactId>aspectjweaver</artifactId>
                 <version>1.9.4</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
