--- a/shop-mall-app/src/main/resources/application-test.properties
+++ b/shop-mall-app/src/main/resources/application-test.properties
@@ -48,3 +48,5 @@ zookeeper.connect-string=ops-basic01.lingda.com:2181
 zookeeper.config.path=/lingmou-dev-xinzhou
 zookeeper.regist.path=/devServices_xinzhou
 #zookeeper.watch.path=/auto_build
+
+spring.transaction.rollback-on-commit-failure=true
