--- a/shop-mall-app/src/main/resources/application.properties
+++ b/shop-mall-app/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.profiles.active=${spring.profiles.active}
 server.port=${server.port}
 
 spring.application.name=smarter-devops
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
