--- a/shop-mall-app/src/main/resources/application.properties
+++ b/shop-mall-app/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.application.name=smarter-devops
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+#获取Web_access_tokenhttps的请求地址
+wx.webAccessTokenhttps = https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+#小程序ID
+wx.appId=
+#小程序密钥
+wx.secret=
